src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginHorizStackContent.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

<StackPanel Height="450" Width="450" Background="yellow" Orientation="horizontal">

	<Button Margin="-50" />
	<Button Margin="-15,5,10,10" />
	<Button Margin="-10,-20,-30,-40" />
	<Button Margin="-10,10" />
	<Button Margin="-25" />
	<Button Margin="25,-75,-35,-25" />
	<Button Margin="25,25,-25,-25" />

</StackPanel>

</Grid>
